Overflow and consecutive operator issue fixed

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -12,12 +12,14 @@
     font-size: 4rem;
     text-align: right;
     font-family: Courier, monospace;
+    overflow: auto;
 }
 
 .subdisplay {
     border-bottom: 1px solid black;
     height: 25%;
     font-size: 2rem;
+    overflow: auto;
 }
 
 .keypad {
